syntax = "proto3";
package ledger.core.message.utils;

// Create "xpub" from points in hex (x and y coordinates)
message CreateXpubFromPointsRequest {
    string version_prefix = 1;
    uint32 depth = 2;
    string parent_public_point = 3;
    uint32 index = 4;
    string chain_code = 5;
    string public_point = 6;
}

message CreateXpubFromPointsResponse {
    string xpub = 1;
}

message UtilsRequest {
    oneof request {
        CreateXpubFromPointsRequest xpub_from_points = 1;
    }
}